[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "termtrack"
version = "0.7.4"
description = "Track Earth-orbiting satellites from your terminal"
readme = "README.md"
license = "GPL-3.0-only"
authors = [
    { name = "Torsten Rehn", email = "torsten@rehn.email" }
]
keywords = ["terminal", "track", "tracking", "satellite", "orbit", "iss"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Natural Language :: English",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
requires-python = ">=3.3"
dependencies = [
    "Pillow>=2.7.0",
    "pyshp>=1.2.1",
    "requests>=2.0.0",
    "skyfield>=1.45",
]

[project.urls]
Homepage = "https://github.com/trehn/termtrack"
Repository = "https://github.com/trehn/termtrack"
Issues = "https://github.com/trehn/termtrack/issues"

[project.scripts]
termtrack = "termtrack.cli:main"

[tool.setuptools.packages.find]
include = ["termtrack*"]

[tool.setuptools.package-data]
termtrack = [
    "data/de421.bsp",
    "data/earth.jpg",
    "data/mars.jpg",
    "data/moon.jpg",
    "data/ne_110m_land.dbf",
    "data/ne_110m_land.shp",
    "data/ne_110m_land.shx",
]
